// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Metric table for the change_failure_rate table row when the data is loaded renders the metric values 1`] = `
[
  "20.0%",
  "40.0%",
  "60.0%",
  "20.0%",
  "40.0%",
  "60.0%",
]
`;

exports[`Metric table for the change_failure_rate table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "data": [
    [
      "Jul 1 – 31",
      20,
    ],
    [
      "Aug 1 – 31",
      40,
    ],
    [
      "Sep 1 – 30",
      60,
    ],
    [
      "Oct 1 – 31",
      20,
    ],
    [
      "Nov 1 – 30",
      40,
    ],
  ],
  "tooltipLabel": "%",
  "trendStyle": "DESC",
}
`;

exports[`Metric table for the code_suggestions_acceptance_rate table row when the data is loaded renders the metric values 1`] = `
[
  "20.0% 3/15",
  "42.9% 3/7",
  "66.7% 10/15",
  "50.0% 9/18",
  "17.6% 3/17",
  "33.3% 4/12",
]
`;

exports[`Metric table for the code_suggestions_acceptance_rate table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "data": [
    [
      "Jul 1 – 31",
      20,
    ],
    [
      "Aug 1 – 31",
      42.9,
    ],
    [
      "Sep 1 – 30",
      66.7,
    ],
    [
      "Oct 1 – 31",
      50,
    ],
    [
      "Nov 1 – 30",
      17.6,
    ],
  ],
  "tooltipLabel": "%",
  "trendStyle": "ASC",
}
`;

exports[`Metric table for the code_suggestions_usage_rate table row renders the correct metric values and tooltips pre- and post-release 1`] = `
[
  "5.0% The usage data may be incomplete due to backend calculations starting after upgrade to GitLab 16.11. For more information, see epic 12978.",
  "10.0% The usage data may be incomplete due to backend calculations starting after upgrade to GitLab 16.11. For more information, see epic 12978.",
  "25.0% 1/4",
  "5.0% 1/20",
  "10.0% 1/10",
  "25.0% 1/4",
]
`;

exports[`Metric table for the code_suggestions_usage_rate table row when the data is loaded renders the metric values 1`] = `
[
  "5.0% The usage data may be incomplete due to backend calculations starting after upgrade to GitLab 16.11. For more information, see epic 12978.",
  "10.0% The usage data may be incomplete due to backend calculations starting after upgrade to GitLab 16.11. For more information, see epic 12978.",
  "25.0% The usage data may be incomplete due to backend calculations starting after upgrade to GitLab 16.11. For more information, see epic 12978.",
  "5.0% The usage data may be incomplete due to backend calculations starting after upgrade to GitLab 16.11. For more information, see epic 12978.",
  "10.0% The usage data may be incomplete due to backend calculations starting after upgrade to GitLab 16.11. For more information, see epic 12978.",
  "25.0% The usage data may be incomplete due to backend calculations starting after upgrade to GitLab 16.11. For more information, see epic 12978.",
]
`;

exports[`Metric table for the code_suggestions_usage_rate table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "data": [
    [
      "Jul 1 – 31",
      5,
    ],
    [
      "Aug 1 – 31",
      10,
    ],
    [
      "Sep 1 – 30",
      25,
    ],
    [
      "Oct 1 – 31",
      5,
    ],
    [
      "Nov 1 – 30",
      10,
    ],
  ],
  "tooltipLabel": "%",
  "trendStyle": "ASC",
}
`;

exports[`Metric table for the contributor_count table row when the data is loaded renders the metric values 1`] = `
[
  "4",
  "4",
  "4",
  "4",
  "4",
  "4",
]
`;

exports[`Metric table for the contributor_count table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "data": [
    [
      "Jul 1 – 31",
      4,
    ],
    [
      "Aug 1 – 31",
      4,
    ],
    [
      "Sep 1 – 30",
      4,
    ],
    [
      "Oct 1 – 31",
      4,
    ],
    [
      "Nov 1 – 30",
      4,
    ],
  ],
  "tooltipLabel": "",
  "trendStyle": "ASC",
}
`;

exports[`Metric table for the cycle_time table row when the data is loaded renders the metric values 1`] = `
[
  "1.0 d",
  "2.0 d",
  "4.0 d",
  "1.0 d",
  "2.0 d",
  "4.0 d",
]
`;

exports[`Metric table for the cycle_time table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "data": [
    [
      "Jul 1 – 31",
      1,
    ],
    [
      "Aug 1 – 31",
      2,
    ],
    [
      "Sep 1 – 30",
      4,
    ],
    [
      "Oct 1 – 31",
      1,
    ],
    [
      "Nov 1 – 30",
      2,
    ],
  ],
  "tooltipLabel": "days",
  "trendStyle": "DESC",
}
`;

exports[`Metric table for the deployment_frequency table row when the data is loaded renders the metric values 1`] = `
[
  "10.0/d",
  "20.0/d",
  "40.0/d",
  "10.0/d",
  "20.0/d",
  "40.0/d",
]
`;

exports[`Metric table for the deployment_frequency table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "data": [
    [
      "Jul 1 – 31",
      10,
    ],
    [
      "Aug 1 – 31",
      20,
    ],
    [
      "Sep 1 – 30",
      40,
    ],
    [
      "Oct 1 – 31",
      10,
    ],
    [
      "Nov 1 – 30",
      20,
    ],
  ],
  "tooltipLabel": "/day",
  "trendStyle": "ASC",
}
`;

exports[`Metric table for the deploys table row when the data is loaded renders the metric values 1`] = `
[
  "5",
  "10",
  "20",
  "5",
  "10",
  "20",
]
`;

exports[`Metric table for the deploys table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "data": [
    [
      "Jul 1 – 31",
      5,
    ],
    [
      "Aug 1 – 31",
      10,
    ],
    [
      "Sep 1 – 30",
      20,
    ],
    [
      "Oct 1 – 31",
      5,
    ],
    [
      "Nov 1 – 30",
      10,
    ],
  ],
  "tooltipLabel": "",
  "trendStyle": "ASC",
}
`;

exports[`Metric table for the duo_chat_usage_rate table row when the data is loaded renders the metric values 1`] = `
[
  "20.0% 3/15",
  "42.9% 3/7",
  "66.7% 10/15",
  "50.0% 9/18",
  "17.6% 3/17",
  "33.3% 4/12",
]
`;

exports[`Metric table for the duo_chat_usage_rate table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "data": [
    [
      "Jul 1 – 31",
      20,
    ],
    [
      "Aug 1 – 31",
      42.9,
    ],
    [
      "Sep 1 – 30",
      66.7,
    ],
    [
      "Oct 1 – 31",
      50,
    ],
    [
      "Nov 1 – 30",
      17.6,
    ],
  ],
  "tooltipLabel": "%",
  "trendStyle": "ASC",
}
`;

exports[`Metric table for the duo_rca_usage_rate table row renders the correct metric values and tooltips pre- and post-release 1`] = `
[
  "33.3% Data available after upgrade to GitLab 18.0. Learn more.",
  "85.7% Data available after upgrade to GitLab 18.0. Learn more.",
  "73.3% 11/15",
  "66.7% 12/18",
  "41.2% 7/17",
  "50.0% 6/12",
]
`;

exports[`Metric table for the duo_rca_usage_rate table row when the data is loaded renders the metric values 1`] = `
[
  "33.3% Data available after upgrade to GitLab 18.0. Learn more.",
  "85.7% Data available after upgrade to GitLab 18.0. Learn more.",
  "73.3% Data available after upgrade to GitLab 18.0. Learn more.",
  "66.7% Data available after upgrade to GitLab 18.0. Learn more.",
  "41.2% Data available after upgrade to GitLab 18.0. Learn more.",
  "50.0% Data available after upgrade to GitLab 18.0. Learn more.",
]
`;

exports[`Metric table for the duo_rca_usage_rate table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "data": [
    [
      "Jul 1 – 31",
      33.3,
    ],
    [
      "Aug 1 – 31",
      85.7,
    ],
    [
      "Sep 1 – 30",
      73.3,
    ],
    [
      "Oct 1 – 31",
      66.7,
    ],
    [
      "Nov 1 – 30",
      41.2,
    ],
  ],
  "tooltipLabel": "%",
  "trendStyle": "ASC",
}
`;

exports[`Metric table for the duo_review_comment_count table row when the data is loaded renders the metric values 1`] = `
[
  "45",
  "22",
  "67",
  "34",
  "28",
  "53",
]
`;

exports[`Metric table for the duo_review_comment_count table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "data": [
    [
      "Jul 1 – 31",
      45,
    ],
    [
      "Aug 1 – 31",
      22,
    ],
    [
      "Sep 1 – 30",
      67,
    ],
    [
      "Oct 1 – 31",
      34,
    ],
    [
      "Nov 1 – 30",
      28,
    ],
  ],
  "tooltipLabel": "",
  "trendStyle": "ASC",
}
`;

exports[`Metric table for the duo_review_requests_count table row when the data is loaded renders the metric values 1`] = `
[
  "20",
  "8",
  "32",
  "15",
  "11",
  "26",
]
`;

exports[`Metric table for the duo_review_requests_count table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "data": [
    [
      "Jul 1 – 31",
      20,
    ],
    [
      "Aug 1 – 31",
      8,
    ],
    [
      "Sep 1 – 30",
      32,
    ],
    [
      "Oct 1 – 31",
      15,
    ],
    [
      "Nov 1 – 30",
      11,
    ],
  ],
  "tooltipLabel": "",
  "trendStyle": "ASC",
}
`;

exports[`Metric table for the issues table row when the data is loaded renders the metric values 1`] = `
[
  "1",
  "2",
  "4",
  "1",
  "2",
  "4",
]
`;

exports[`Metric table for the issues table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "data": [
    [
      "Jul 1 – 31",
      1,
    ],
    [
      "Aug 1 – 31",
      2,
    ],
    [
      "Sep 1 – 30",
      4,
    ],
    [
      "Oct 1 – 31",
      1,
    ],
    [
      "Nov 1 – 30",
      2,
    ],
  ],
  "tooltipLabel": "",
  "trendStyle": "ASC",
}
`;

exports[`Metric table for the issues_completed table row when the data is loaded renders the metric values 1`] = `
[
  "5",
  "10",
  "20",
  "5",
  "10",
  "20",
]
`;

exports[`Metric table for the issues_completed table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "data": [
    [
      "Jul 1 – 31",
      5,
    ],
    [
      "Aug 1 – 31",
      10,
    ],
    [
      "Sep 1 – 30",
      20,
    ],
    [
      "Oct 1 – 31",
      5,
    ],
    [
      "Nov 1 – 30",
      10,
    ],
  ],
  "tooltipLabel": "",
  "trendStyle": "ASC",
}
`;

exports[`Metric table for the lead_time table row when the data is loaded renders the metric values 1`] = `
[
  "1.0 d",
  "2.0 d",
  "4.0 d",
  "1.0 d",
  "2.0 d",
  "4.0 d",
]
`;

exports[`Metric table for the lead_time table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "data": [
    [
      "Jul 1 – 31",
      1,
    ],
    [
      "Aug 1 – 31",
      2,
    ],
    [
      "Sep 1 – 30",
      4,
    ],
    [
      "Oct 1 – 31",
      1,
    ],
    [
      "Nov 1 – 30",
      2,
    ],
  ],
  "tooltipLabel": "days",
  "trendStyle": "DESC",
}
`;

exports[`Metric table for the lead_time_for_changes table row when the data is loaded renders the metric values 1`] = `
[
  "1.2 d",
  "2.3 d",
  "4.6 d",
  "1.2 d",
  "2.3 d",
  "4.6 d",
]
`;

exports[`Metric table for the lead_time_for_changes table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "data": [
    [
      "Jul 1 – 31",
      1.2,
    ],
    [
      "Aug 1 – 31",
      2.3,
    ],
    [
      "Sep 1 – 30",
      4.6,
    ],
    [
      "Oct 1 – 31",
      1.2,
    ],
    [
      "Nov 1 – 30",
      2.3,
    ],
  ],
  "tooltipLabel": "days",
  "trendStyle": "DESC",
}
`;

exports[`Metric table for the median_time_to_merge table row when the data is loaded renders the metric values 1`] = `
[
  "0.1 d",
  "0.2 d",
  "0.3 d",
  "0.3 d",
  "0.2 d",
  "0.1 d",
]
`;

exports[`Metric table for the median_time_to_merge table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "data": [
    [
      "Jul 1 – 31",
      0.1,
    ],
    [
      "Aug 1 – 31",
      0.2,
    ],
    [
      "Sep 1 – 30",
      0.3,
    ],
    [
      "Oct 1 – 31",
      0.3,
    ],
    [
      "Nov 1 – 30",
      0.2,
    ],
  ],
  "tooltipLabel": "days",
  "trendStyle": "DESC",
}
`;

exports[`Metric table for the merge_request_throughput table row when the data is loaded renders the metric values 1`] = `
[
  "10",
  "10",
  "10",
  "10",
  "10",
  "10",
]
`;

exports[`Metric table for the merge_request_throughput table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "data": [
    [
      "Jul 1 – 31",
      10,
    ],
    [
      "Aug 1 – 31",
      10,
    ],
    [
      "Sep 1 – 30",
      10,
    ],
    [
      "Oct 1 – 31",
      10,
    ],
    [
      "Nov 1 – 30",
      10,
    ],
  ],
  "tooltipLabel": "",
  "trendStyle": "ASC",
}
`;

exports[`Metric table for the pipeline_count table row when the data is loaded renders the metric values 1`] = `
[
  "387",
  "37",
  "27",
  "95",
  "75",
  "100",
]
`;

exports[`Metric table for the pipeline_count table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "data": [
    [
      "Jul 1 – 31",
      387,
    ],
    [
      "Aug 1 – 31",
      37,
    ],
    [
      "Sep 1 – 30",
      27,
    ],
    [
      "Oct 1 – 31",
      95,
    ],
    [
      "Nov 1 – 30",
      75,
    ],
  ],
  "tooltipLabel": "",
  "trendStyle": "NONE",
}
`;

exports[`Metric table for the pipeline_duration_median table row when the data is loaded renders the metric values 1`] = `
[
  "2.5 m",
  "2.0 m",
  "2.8 m",
  "1.5 m",
  "4.2 m",
  "1.7 m",
]
`;

exports[`Metric table for the pipeline_duration_median table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "data": [
    [
      "Jul 1 – 31",
      2.5,
    ],
    [
      "Aug 1 – 31",
      2,
    ],
    [
      "Sep 1 – 30",
      2.8,
    ],
    [
      "Oct 1 – 31",
      1.5,
    ],
    [
      "Nov 1 – 30",
      4.2,
    ],
  ],
  "tooltipLabel": "minutes",
  "trendStyle": "DESC",
}
`;

exports[`Metric table for the pipeline_failed_rate table row when the data is loaded renders the metric values 1`] = `
[
  "45.2% 175/387",
  "40.5% 15/37",
  "18.5% 5/27",
  "10.5% 10/95",
  "20.0% 15/75",
  "25.0% 25/100",
]
`;

exports[`Metric table for the pipeline_failed_rate table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "data": [
    [
      "Jul 1 – 31",
      45.2,
    ],
    [
      "Aug 1 – 31",
      40.5,
    ],
    [
      "Sep 1 – 30",
      18.5,
    ],
    [
      "Oct 1 – 31",
      10.5,
    ],
    [
      "Nov 1 – 30",
      20,
    ],
  ],
  "tooltipLabel": "%",
  "trendStyle": "DESC",
}
`;

exports[`Metric table for the pipeline_success_rate table row when the data is loaded renders the metric values 1`] = `
[
  "38.5% 149/387",
  "132.4% 49/37",
  "37.0% 10/27",
  "63.1% 60/95",
  "24.0% 18/75",
  "50.0% 50/100",
]
`;

exports[`Metric table for the pipeline_success_rate table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "data": [
    [
      "Jul 1 – 31",
      38.5,
    ],
    [
      "Aug 1 – 31",
      132.4,
    ],
    [
      "Sep 1 – 30",
      37,
    ],
    [
      "Oct 1 – 31",
      63.1,
    ],
    [
      "Nov 1 – 30",
      24,
    ],
  ],
  "tooltipLabel": "%",
  "trendStyle": "ASC",
}
`;

exports[`Metric table for the time_to_restore_service table row when the data is loaded renders the metric values 1`] = `
[
  "1.2 d",
  "2.3 d",
  "4.6 d",
  "1.2 d",
  "2.3 d",
  "4.6 d",
]
`;

exports[`Metric table for the time_to_restore_service table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "data": [
    [
      "Jul 1 – 31",
      1.2,
    ],
    [
      "Aug 1 – 31",
      2.3,
    ],
    [
      "Sep 1 – 30",
      4.6,
    ],
    [
      "Oct 1 – 31",
      1.2,
    ],
    [
      "Nov 1 – 30",
      2.3,
    ],
  ],
  "tooltipLabel": "days",
  "trendStyle": "DESC",
}
`;

exports[`Metric table for the vulnerability_critical table row when the data is loaded renders the metric values 1`] = `
[
  "40",
  "20",
  "10",
  "40",
  "20",
  "10",
]
`;

exports[`Metric table for the vulnerability_critical table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "data": [
    [
      "Jul 1 – 31",
      40,
    ],
    [
      "Aug 1 – 31",
      20,
    ],
    [
      "Sep 1 – 30",
      10,
    ],
    [
      "Oct 1 – 31",
      40,
    ],
    [
      "Nov 1 – 30",
      20,
    ],
  ],
  "tooltipLabel": "",
  "trendStyle": "DESC",
}
`;

exports[`Metric table for the vulnerability_high table row when the data is loaded renders the metric values 1`] = `
[
  "40",
  "20",
  "10",
  "40",
  "20",
  "10",
]
`;

exports[`Metric table for the vulnerability_high table row when the data is loaded renders the sparkline chart with expected props 1`] = `
{
  "data": [
    [
      "Jul 1 – 31",
      40,
    ],
    [
      "Aug 1 – 31",
      20,
    ],
    [
      "Sep 1 – 30",
      10,
    ],
    [
      "Oct 1 – 31",
      40,
    ],
    [
      "Nov 1 – 30",
      20,
    ],
  ],
  "tooltipLabel": "",
  "trendStyle": "DESC",
}
`;
